tests/errors/sem.type-mismatch.ptr-args.or
main :: () -> void {
    x := 9;
    y := true;
    ptrdiff(&x, &y);
};
